<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">rental</string>

    <string name="user_name">账号</string>
    <string name="user_pass">密码</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="next">下一步</string>
    <string name="accomplish">完成</string>
    <string name="exitlogin">注销</string>
    <string name="forget_pass">忘记密码</string>
    <string name="new_user">新用户</string>

    <string name="set_check_code">请输入验证码</string>
    <string name="set_get_code">获取验证码</string>
    <string name="set_phone">请输入电话号码</string>
    <string name="set_password1">请设置密码</string>
    <string name="set_password2">请确认密码</string>
    <string name="set_nickname">请设置昵称</string>

    <string name="find_title">重置密码</string>
    <string name="find_phone">电话号码</string>
    <string name="action_settings">Settings</string>

    <string name="location_now">当前位置</string>
</resources>
