<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res/com.example.rental"
              android:orientation="vertical"
              android:background="@color/light_grey"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView
            android:text="@string/find_title"
            style="@style/top_title"/>

    <ThirdParityLibraries.floatlabelededittext.FloatLabeledEditText
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            app:fletPadding="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <EditText android:layout_width="match_parent"
                  android:layout_height="40dp"
                  android:inputType="phone"
                  android:hint="@string/find_phone"
                  android:id="@+id/find_phone"
                  style="@style/login_edit"/>
    </ThirdParityLibraries.floatlabelededittext.FloatLabeledEditText>

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal"
                  android:layout_marginTop="10dp"
                  android:layout_marginLeft="10dp"
                  android:layout_marginRight="10dp">
        <ThirdParityLibraries.floatlabelededittext.FloatLabeledEditText
                android:layout_weight="11"
                android:layout_width="wrap_content"
                android:layout_height="60dp">
            <EditText android:layout_width="match_parent"
                      android:layout_height="40dp"
                      android:id="@+id/find_checkcode"
                      android:inputType="number"
                      android:hint="@string/set_check_code"
                      style="@style/login_edit"
                      android:background="@color/white"/>
        </ThirdParityLibraries.floatlabelededittext.FloatLabeledEditText>

        <ThirdParityLibraries.FButton
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="20dp"
                android:text="@string/set_get_code"
                android:textSize="16sp"
                android:id="@+id/find_getcheckcode"
                app:shadowEnabled="true"
                android:layout_weight="8"/>

    </LinearLayout>

    <ThirdParityLibraries.FButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:paddingLeft="40dp"
            android:paddingRight="40dp"
            android:text="@string/next"
            android:id="@+id/find_next"
            android:textColor="@color/white"
            app:shadowEnabled="true"
            android:textSize="20sp"/>

    <ThirdParityLibraries.floatlabelededittext.FloatLabeledEditText
            app:fletPadding="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <EditText android:layout_width="match_parent" android:layout_height="40dp"
                  android:hint="@string/set_password1"
                  android:id="@+id/find_password1"
                  style="@style/login_edit"
                  android:padding="5dp"
                  android:layout_marginTop="22dp"
                  android:layout_marginLeft="10dp"
                  android:layout_marginRight="10dp"
                  android:gravity="center_vertical"
                  android:inputType="textPassword"/>
    </ThirdParityLibraries.floatlabelededittext.FloatLabeledEditText>

    <ThirdParityLibraries.floatlabelededittext.FloatLabeledEditText
            app:fletPadding="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <EditText android:layout_width="match_parent"
                  android:layout_height="40dp"
                  android:hint="@string/set_password2"
                  android:id="@+id/find_password2"
                  android:inputType="textPassword"
                  style="@style/login_edit"
                  android:layout_marginTop="22dp"
                  android:layout_marginLeft="10dp"
                  android:layout_marginRight="10dp"
                  android:gravity="center_vertical"/>
    </ThirdParityLibraries.floatlabelededittext.FloatLabeledEditText>

    <ThirdParityLibraries.FButton
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:id="@+id/find_accomplish"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            app:shadowEnabled="true"
            android:text="@string/accomplish"/>
</LinearLayout>